...
          ],
        ),
      ),
    );
  }

  List<String> text = ['D', 'W', 'M', '3M', '6M', 'Y'];
  List<bool> textbool = [
    true,
    false,
    false,
    false,
    false,
...
